--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,8 @@ dependencies:
   scroll_snap_list: ^0.8.4
   vertical_card_pager: ^1.5.0
   fab_circular_menu: ^1.0.2
-  pie_chart: ^5.3.0
-  charts_flutter: ^0.11.0
+  syncfusion_flutter_charts: ^20.1.55
+
 
 
 dev_dependencies:
