--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.1 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -43,6 +43,14 @@ dependencies:
   scroll_snap_list: ^0.8.4
   vertical_card_pager: ^1.5.0
   fab_circular_menu: ^1.0.2
+  font_awesome_flutter:
+  modal_progress_hud: ^0.1.3
+  animated_text_kit: ^4.2.1
+  cloud_firestore: ^2.2.2
+  firebase_core: ^1.3.0
+  firebase_auth: ^1.4.1
+
+
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +81,11 @@ flutter:
     - assets/expense.png
     - assets/icon.png
     - assets/face.png
+    - assets/images/Kuber.png
+    - assets/images/Kuber1.png
+    - assets/images/Kuber-LogoSVG.svg
+    - assets/images/KuberRed.png
+    - assets/images/KuberNew.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
