--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   scroll_snap_list: ^0.8.4
   vertical_card_pager: ^1.5.0
   fab_circular_menu: ^1.0.2
+  firebase_core: ^1.3.0
+  firebase_auth: ^1.4.1
+  cloud_firestore: ^2.2.2
+  syncfusion_flutter_charts: ^20.1.55
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +77,11 @@ flutter:
     - assets/expense.png
     - assets/icon.png
     - assets/face.png
+    - assets/images/Kuber.png
+    - assets/images/Kuber1.png
+    - assets/images/KuberRed.png
+    - assets/images/KuberNew.jpg
+    - assets/images/Kuber-LogoSVG.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
